--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         $('#modalLogin').modal('show');
         
         loadUserCalendar();
+        loadUserBands();
       });
     </script>
     
@@ -237,6 +238,7 @@
                     </div>
                     <div class="info">
                       <h3>Alexisonfire</h3>
+                      <div class="band-info-spotify-id"></div>
                     </div>
                     <div class="bottom">
                       <a type="button" class="btn btn-spotify btn-sm" href="https://open.spotify.com/artist/53RsXctnNmj9oKXvcbvzI2">Ouça no Spotify!</a>
@@ -254,6 +256,7 @@
                     </div>
                     <div class="info">
                       <h3>Architects</h3>
+                      <div class="band-info-spotify-id">3ZztVuWxHzNpl0THurTFCv </div>
                     </div>
                     <div class="bottom">
                       <button type="button" class="btn btn-spotify btn-sm">Ouça no Spotify!</button>
