--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
         setUpBandsSearch();
         
         // Show Login
+        $('#modalLogin').modal({
+          keyboard: false,
+          backdrop: 'static'
+        });
         $('#modalLogin').modal('show');
-
-        // ToDo: move this to login
-        loadUserData();
       });
     </script>
     
@@ -71,7 +72,6 @@
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">x</button>
             <h4 class="modal-title">Login em GeTickets!</h4>
           </div>
           <div class="modal-body">
@@ -79,11 +79,13 @@
               <div class="form-group">
                 <input type="email" class="form-control" id="login-user" placeholder="Usuário">
               </div>
+              <!--
               <div class="form-group">
                 <input type="password" class="form-control" id="login-pwd" placeholder="Senha">
               </div>
-              <button type="button" class="btn btn-standard" data-dismiss="modal" onclick="login();">Entrar</button>
-              <p><a href="#">Esqueceu a senha?</a></p>
+              -->
+              <button type="button" class="btn btn-standard" onclick="login();">Entrar</button>
+              <p><a href="#">Novo cadastro</a></p>
             </form>
           </div>
         </div>
@@ -97,7 +99,7 @@
         <div class="container">
           <a id="nav-username" class="navbar-brand" href="#"></a>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Sair</a></li>
+            <li><a href="#" onclick="logout();">Sair</a></li>
           </ul>
         </div>
       </nav>
@@ -151,51 +153,43 @@
                     <div class="form-group">
                       <label class="col-lg-3 control-label">Nome:</label>
                       <div class="col-md-8">
-                        <input class="form-control" type="text" value="Filipe Belatti">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="col-lg-3 control-label">Idade:</label>
-                      <div class="col-lg-8">
-                        <input class="form-control" type="text" value="23">
+                        <input id="user-info-name" class="form-control" type="text" value="">
                       </div>
                     </div>
                     <div class="form-group">
                       <label class="col-lg-3 control-label">Cidade:</label>
                       <div class="col-lg-8">
-                        <input class="form-control" type="text" value="São Paulo">
+                        <input id="user-info-city" class="form-control" type="text" value="">
                       </div>
                     </div>
                     <div class="form-group">
                       <label class="col-lg-3 control-label">Email:</label>
                       <div class="col-lg-8">
-                        <input class="form-control" type="text" value="fibelatti@gmail.com">
+                        <input id="user-info-email" class="form-control" type="text" value="">
                       </div>
                     </div>
                     <div class="form-group">
                       <label class="col-md-3 control-label">Usuário:</label>
                       <div class="col-md-8">
-                        <input class="form-control" type="text" value="fibelatti">
+                        <input id="user-info-username" class="form-control" type="text" value="">
                       </div>
                     </div>
                     <div class="form-group">
                       <label class="col-md-3 control-label">Senha:</label>
                       <div class="col-md-8">
-                        <input class="form-control" type="password" value="11111122333">
+                        <input id="user-info-password" class="form-control" type="password" value="">
                       </div>
                     </div>
                     <div class="form-group">
                       <label class="col-lg-3 control-label">Gêneros:</label>
                       <div class="col-lg-8">
-                        <input id="gendertags" class="form-control" type="text" value="" data-role="tagsinput">
+                        <input id="user-info-gendertags" class="form-control" type="text" value="" data-role="tagsinput">
                       </div>
                     </div>
                     <div class="form-group">
                       <label class="col-md-3 control-label"></label>
                       <div class="col-md-8">
-                        <input type="button" class="btn btn-primary" value="Save Changes">
-                        <span></span>
-                        <input type="reset" class="btn btn-default" value="Cancel">
+                        <input type="button" class="btn btn-standard" value="Salvar">
                       </div>
                     </div>
                   </form>
