--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
         setUpCalendar();
         setUpBandsSearch();
         
+        $(function () {
+          $('[data-toggle="tooltip"]').tooltip()
+        })
+        
         // Show Login
         $('#modalLogin').modal({
           keyboard: false,
@@ -211,7 +215,7 @@
                   </select>
                 </div>
                 <div class="col-xs-2 col-sm-2 col-md-2">
-                  <button type="button" class="btn btn-standard" onclick="addBandCard();">
+                  <button type="button" class="btn btn-standard" onclick="addBandCard();" data-toggle="tooltip" data-placement="bottom" title="Adicionar a banda selecionada às minhas bandas">
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                   </button>
                 </div>
@@ -233,6 +237,9 @@
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
+            <button type="button" class="btn btn-standard pull-left" onclick="goToToday();" data-toggle="tooltip" data-placement="right" title="Ir para a data atual">
+              <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+            </button>
             <button type="button" class="close" data-dismiss="modal">x</button>
             <h4 class="modal-title">Calendário</h4>
           </div>
@@ -244,7 +251,7 @@
                   <div class="responsive-calendar">
                     <div class="controls">
                       <div class="col-xs-1 col-sm-1 col-lg-1">
-                        <button type="button" class="btn btn-standard btn-sm" data-go="prev">
+                        <button type="button" class="btn btn-standard btn-sm" data-go="prev" data-toggle="tooltip" data-placement="right" title="Mês anterior">
                           <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
                         </button>
                       </div>
@@ -255,7 +262,7 @@
                         </h4>
                       </div>
                       <div class="col-xs-1 col-sm-1 col-lg-1">
-                        <button type="button" class="btn btn-standard btn-sm" data-go="next">
+                        <button type="button" class="btn btn-standard btn-sm" data-go="next" data-toggle="tooltip" data-placement="right" title="Próximo mês">
                           <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
                         </button>
                       </div>
@@ -294,7 +301,7 @@
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" class="btn btn-standard pull-left" onclick="refreshUserDiscover();">
+            <button type="button" class="btn btn-standard pull-left" onclick="refreshUserDiscover();" data-toggle="tooltip" data-placement="right" title="Novas recomendações">
               <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
             </button>
             <button type="button" class="close" data-dismiss="modal">x</button>
